# hexars

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
hexars/: Cargo.toml
hexars/src/: errors.rs  lib.rs
hexars/src/app/: mod.rs  result.rs  short_url_service.rs
hexars/src/domain/: base.rs  short_url_entity.rs
hexars/src/infra/: config.rs  mod.rs
hexars/src/infra/db/: mod.rs
hexars/src/infra/db/repos/: short_url_repo_sqlx.rs
hexars/src/infra/di/: mod.rs
hexars/src/web/: app.rs  mod.rs  response.rs  server.rs
hexars/src/web/routes/: health.rs  mod.rs  short_url.rs
migrations/: Cargo.toml  migrate.rs
migrations/src/: lib.rs  main.rs
migrations/src/migration_files/: V1__initial.rs  mod.rs
src/: errors.rs  lib.rs
src/app/: mod.rs  short_url_service.rs
src/domain/: base.rs  mod.rs  short_url_entity.rs
src/infra/db/: mod.rs
src/infra/db/migrations/: V1__initial.rs  mod.rs
src/infra/db/repos/: mod.rs  short_url_repo_sqlx.rs
src/infra/di/: mod.rs
src/web/: server.rs
