[package]
name = "hexars"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "migrations/**/*"]

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/web/server.rs"

[[bin]]
name = "migrate"
path = "migrations/migrate.rs"

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 3
panic = "abort"
overflow-checks = true
build-override = { opt-level = 0 }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
barrel = { version = "0.7.0", features = ["pg"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
nanoid = "0.4.0"
once_cell = "1.15.0"
refinery = { version = "0.8.6", features = ["tokio-postgres"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "chrono",
  "macros",
  "json",
  "uuid",
] }
thiserror = "1.0.34"
tokio = { version = "1.21.1", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
