[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "migrate"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barrel = { version = "0.7.0", features = ["pg"] }
postgres = "0.19.4"
refinery = { version = "0.8.6", features = ["postgres"] }
